--- a/DP.TwinRinksHelper.Web/DP.TwinRinksHelper.Web.csproj
+++ b/DP.TwinRinksHelper.Web/DP.TwinRinksHelper.Web.csproj
@@ -1,6 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>aspnet-DP.TwinRinksHelper.Web-17121E8B-D20B-4787-87F2-5F945B2CC086</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
