--- a/DP.TwinRinksHelper.Web/appsettings.json
+++ b/DP.TwinRinksHelper.Web/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
-   "Logging": {
+{
+  "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "519bf58d-5010-4e1c-a675-1383485e17d7"
   }
 }
