--- a/DP.TwinRinks.YH.ScheduleParser.Tests/packages.config
+++ b/DP.TwinRinks.YH.ScheduleParser.Tests/packages.config
@@ -6,6 +6,6 @@
   <package id="MSTest.TestFramework" version="1.3.0-beta2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NodaTime" version="2.0.2" targetFramework="net461" />
-  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
 </packages>
