--- a/DP.TwinRinks.YH.ScheduleParser.Tests/packages.config
+++ b/DP.TwinRinks.YH.ScheduleParser.Tests/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HtmlAgilityPack" version="1.7.2" targetFramework="net461" />
-  <package id="Ical.Net" version="4.0.6" targetFramework="net461" />
-  <package id="MSTest.TestAdapter" version="1.3.0-beta2" targetFramework="net461" />
-  <package id="MSTest.TestFramework" version="1.3.0-beta2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="NodaTime" version="2.0.2" targetFramework="net461" />
-  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="HtmlAgilityPack" version="1.11.54" targetFramework="net48" />
+  <package id="Ical.Net" version="4.2.0" targetFramework="net48" />
+  <package id="MSTest.TestAdapter" version="3.1.1" targetFramework="net48" />
+  <package id="MSTest.TestFramework" version="3.1.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NodaTime" version="3.1.9" targetFramework="net48" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
 </packages>
